--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.alertio.root.alertio.MainActivity">
 
     <com.mapbox.mapboxsdk.maps.MapView
@@ -15,18 +16,5 @@
         mapbox:mapbox_cameraTargetLng="-3.454"
         mapbox:mapbox_styleUrl="mapbox://styles/mapbox/light-v9"
         mapbox:mapbox_cameraZoom="11" />
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/post_alert_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:text="Post Alert"
-        app:srcCompat="@android:drawable/ic_dialog_email"
-        tools:layout_editor_absoluteX="328dp"
-        tools:layout_editor_absoluteY="455dp" />
-
 
 </android.support.constraint.ConstraintLayout>
