--- a/app/src/main/res/menu/map_menu.xml
+++ b/app/src/main/res/menu/map_menu.xml
@@ -1,11 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context="com.alertio.root.alertio.MainActivity">
 
-    <item android:id="@+id/action_log_out"
-        android:title="@string/action_log_out"
-        android:icon="@drawable/ic_person_outline_24dp"
+    <item
+        android:id="@+id/action_log_out"
         android:orderInCategory="100"
-        app:showAsAction="ifRoom" />
+        android:title="@string/action_log_out"
+        app:showAsAction="never" />
 </menu>
