--- a/app/src/main/res/menu/map_menu.xml
+++ b/app/src/main/res/menu/map_menu.xml
@@ -6,6 +6,6 @@
     <item
         android:id="@+id/action_log_out"
         android:orderInCategory="100"
-        android:title="@string/action_log_out"
+        android:title="@string/action_sign_out"
         app:showAsAction="never" />
 </menu>
